--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -11,13 +11,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="30sp"
-        android:text="@string/app_name">
-    </TextView>
+        android:text="@string/app_name"/>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/fragment_main_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:background="@color/teal_200">
+
+        </com.google.android.material.bottomnavigation.BottomNavigationView>
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/container_bar"
