--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,87 +7,202 @@
     android:orientation="vertical"
     tools:context=".ui.main.MainFragment">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
-        android:text="@string/app_name"/>
+        android:padding="5dp">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableEnd="@android:drawable/ic_menu_more"
+            android:gravity="center"
+            android:paddingStart="5dp"
+            android:text="Москва"
+            android:textColor="#222831"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingEnd="5dp"
+            android:src="@drawable/qr_code_scan"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/fragment_main_container"
+        android:id="@+id/fragment_main_coordinator"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
+            style="Widget.MaterialComponents.BottomNavigationView.Colored"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
-            android:background="@color/teal_200">
+            android:background="#F0F0F0"
+            app:itemRippleColor="@color/black"
+            app:menu="@menu/bottom_navigation_menu" />
 
-        </com.google.android.material.bottomnavigation.BottomNavigationView>
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/container_bar"
-        android:layout_width="match_parent"
-        android:layout_height="300dp"
-        android:fitsSystemWindows="true">
-
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/toolbar_layout"
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/container_bar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            app:toolbarId="@+id/toolbar">
+            android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:fitsSystemWindows="true">
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:id="@+id/banner_imageview"
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/toolbar_layout"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
-                android:scaleType="centerCrop"
-                app:layout_collapseMode="parallax"
-                app:srcCompat="@mipmap/ic_main"/>
+                app:layout_scrollFlags="scroll|exitUntilCollapsed"
+                app:toolbarId="@+id/toolbar">
 
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-    </com.google.android.material.appbar.AppBarLayout>
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="10dp"
+                    android:elevation="10dp"
+                    app:cardCornerRadius="19dp">
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/item_text_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:paddingStart="5dp"
-        android:text="title"
-        android:textColor="@color/black"
-        app:layout_anchor="@id/container_bar"
-        app:layout_anchorGravity="bottom"
-        tools:ignore="RtlSymmetry" />
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/banner_imageview"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:fitsSystemWindows="true"
+                        android:scaleType="centerCrop"
+                        app:layout_collapseMode="parallax"
+                        app:srcCompat="@mipmap/banner" />
 
-    <androidx.core.widget.NestedScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="20dp"
-        app:layout_behavior=".utils.NestedBehavior">
+                </com.google.android.material.card.MaterialCardView>
 
-        <LinearLayout
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <HorizontalScrollView
+            android:id="@+id/scroll"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            app:layout_anchor="@id/item_text_name"
-            app:layout_anchorGravity="bottom"
-            android:orientation="vertical">
+            android:layout_gravity="bottom"
+            android:layout_margin="5dp"
+            android:scrollbarSize="1dp"
+            android:scrollbars="none"
+            app:layout_anchor="@id/container_bar"
+            app:layout_anchorGravity="bottom">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recycler_view_food"
+            <LinearLayout
+                android:id="@+id/btn_group_menu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <com.google.android.material.button.MaterialButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:elevation="2dp"
+                    android:stateListAnimator="@null"
+                    android:text="Напитки"
+                    android:textColor="#C3C4C9"
+                    android:textSize="@dimen/text_btn_menu_10sp"
+                    android:translationX="2dp"
+                    android:translationZ="1dp"
+                    app:backgroundTint="@color/white" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:elevation="2dp"
+                    android:stateListAnimator="@null"
+                    android:text="Десерты"
+                    android:textColor="#C3C4C9"
+                    android:textSize="@dimen/text_btn_menu_10sp"
+                    android:translationX="2dp"
+                    android:translationZ="1dp"
+                    app:backgroundTint="@color/white" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:background="@drawable/bg_btn"
+                    android:elevation="2dp"
+                    android:stateListAnimator="@null"
+                    android:text="Пицца"
+                    android:textColor="#FD3A69"
+                    android:textSize="@dimen/text_btn_menu_10sp"
+                    android:translationX="2dp"
+                    android:translationZ="1dp" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:checkable="false"
+                    android:elevation="2dp"
+                    android:stateListAnimator="@null"
+                    android:text="Комбо"
+                    android:textColor="#C3C4C9"
+                    android:textSize="@dimen/text_btn_menu_10sp"
+                    android:translationX="2dp"
+                    android:translationZ="1dp"
+                    app:backgroundTint="@color/white" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:checkable="false"
+                    android:elevation="2dp"
+                    android:stateListAnimator="@null"
+                    android:text="Комбо ПУПЕР"
+                    android:textColor="#C3C4C9"
+                    android:textSize="@dimen/text_btn_menu_10sp"
+                    android:translationX="2dp"
+                    android:translationZ="1dp"
+                    app:backgroundTint="@color/white" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="5dp"
+                    android:checkable="false"
+                    android:elevation="2dp"
+                    android:stateListAnimator="@null"
+                    android:text="Комбо СУПЕР"
+                    android:textColor="#C3C4C9"
+                    android:textSize="@dimen/text_btn_menu_10sp"
+                    android:translationX="2dp"
+                    android:translationZ="1dp"
+                    app:backgroundTint="@color/white" />
+
+            </LinearLayout>
+
+        </HorizontalScrollView>
+
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:ignore="RtlSymmetry" />
+            android:layout_marginBottom="100dp"
+            app:layout_behavior=".utils.NestedBehavior">
 
-        </LinearLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view_food"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-    </androidx.core.widget.NestedScrollView>
+        </androidx.core.widget.NestedScrollView>
+
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
